test 프로그램 linux 호환 수정

--- a/src/TestCommon/TestCommon.cbp
+++ b/src/TestCommon/TestCommon.cbp
@@ -64,6 +64,8 @@
 		<Unit filename="../base/StringHelper.cpp" />
 		<Unit filename="TestFileSystem.cpp" />
 		<Unit filename="TestFileSystem.h" />
+		<Unit filename="TestGcd.cpp" />
+		<Unit filename="TestGcd.h" />
 		<Unit filename="TestStringConvertor.cpp" />
 		<Unit filename="TestStringConvertor.h" />
 		<Unit filename="TestStringHelper.cpp" />
