fix compile error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,8 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_CXX_EXTENSIONS OFF)
 
+include_directories(include/base)
+
 if (APPLE)
     set(CMAKE_CXX_FLAGS "-g")
     set(PLATFORM_HEADER
